# strat-forge

./: .gitignore  AGENTS.md  AI_TASK.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml
src/strat_forge/: __init__.py  exceptions.py  services.py
src/strat_forge/forge/: rolls.py  skills.py
src/strat_forge/forge/entities/: __init__.py  factions.py  skills.py  traits.py
src/strat_forge/forge/resolution/: __init__.py  rolls.py
src/strat_forge/forge/types/: __init__.py  factions.py  resolution.py  skills.py  traits.py
src/strat_forge/infrastructure/: __init__.py  dices.py  rolls.py
tests/unit/: test_github_actions.py  test_import_conventions.py  test_pyproject.py  test_readme.py  test_setup.py
tests/unit/strat_forge/: test___init__.py  test_exceptions.py  test_services.py
tests/unit/strat_forge/forge/: __init__.py  test_rolls.py  test_skills.py
tests/unit/strat_forge/forge/entities/: __init__.py  test_factions.py  test_skills.py  test_traits.py
tests/unit/strat_forge/forge/resolution/: __init__.py  test_rolls.py
tests/unit/strat_forge/forge/types/: __init__.py  test_factions.py  test_resolution.py  test_skills.py  test_traits.py
tests/unit/strat_forge/infrastructure/: __init__.py  test_dices.py  test_rolls.py
